--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "server": "json-server --watch db.json --port 4201",
-    "start-server": "concurrently \"npm run server\" \"npm run start\""
+    "server": "json-server --watch db.json --port 4201 --routes routes.json",
+    "start-server": "concurrently \"npm run server\" \"npm run start\"",
+    "deploy": "ng deploy --repo=https=/https://github.com/Velmoren/user-list-app.git/"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "angular-cli-ghpages": "^1.0.0",
     "bootstrap": "^4.5.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
