--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "server": "json-server --watch db.json --port 4201 --routes routes.json",
-    "start-server": "concurrently \"npm run server\" \"npm run start\"",
-    "deploy": "ng deploy --repo=https=/https://github.com/Velmoren/user-list-app.git/"
+    "start-server": "concurrently \"npm run server\" \"npm run start\""
   },
   "private": true,
   "dependencies": {
